<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_list_dark_theme">Темная тема</string>
    <string name="settings_list_share_app">Поделиться приложением</string>
    <string name="settings_list_write_to_support">Написать в поддержку</string>
    <string name="settings_list_terms_of_usage">Пользовательское соглашение</string>
    <string name="link_terms_of_usage">https://yandex.ru/legal/practicum_offer</string>
    <string name="link_share_app">https://practicum.yandex.ru/android-developer</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="to">tasha.kozhanova@yandex.com</string>
    <string name="track_name">Smells Like Teen Spirit</string>
    <string name="artist_name">Nirvana</string>
    <string name="track_time">5:01</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">История поиска</string>
    <string name="delete_history">Очистить историю</string>
    <string name="track_time_title">Длительность</string>
    <string name="collection_title">Альбом</string>
    <string name="release_year_title">Год</string>
    <string name="genre_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="timeline_mock">00:00</string>
    <string name="collection_mock">Nevermind</string>
    <string name="release_year_mock">1991</string>
    <string name="genre_mock">Rock</string>
    <string name="country_mock">USA</string>
    <string name="empty_url">Ошибка воспроизведения</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="playlists_empty">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_create">Создать</string>
    <string name="playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_dialog_positive">ЗАВЕРШИТЬ</string>
    <string name="playlist_dialog_neutral">ОТМЕНА</string>
    <string name="toast_playlist_created">Плейлист \"%1$s\" создан</string>
    <string name="tracks_pl">%1$s треков</string>
    <string name="tracks_sg">%1$s трек</string>
    <string name="tracks_db">%1$s трека</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="toast_track_added_to_playlist">Добавлено в плейлист \"%1$s\"</string>
    <string name="toast_track_exists_in_playlist">Трек уже добавлен в плейлист \"%1$s\"</string>
    <plurals name="plurals_tracks">
        <item quantity="zero">0 треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="plurals_mitutes">
        <item quantity="zero">0 минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="playlist_name_mock">Очень новый и интересный плейлист с самыми замечательными песнями</string>
    <string name="playlist_description_mock">2024</string>
    <string name="playlist_duration_mock">300 минут</string>
    <string name="playlist_tracks_number_mock">98 треков</string>
    <string name="deleting_dialog_negative">НЕТ</string>
    <string name="deleting_dialog_positive">ДА</string>
    <string name="deleting_dialog_title">Хотите удалить трек?</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="dialog_title_playlist_menu_delete">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="editing_playlist_toolbar">Редактировать</string>
    <string name="editing_playlist_save_button">Сохранить</string>
    <string name="toast_no_tracks_to_share">В этом плейлисте нет списка треков,\nкоторым можно поделиться</string>
    <string name="message_no_tracks_in_playlist">В этом плейлисте еще нет треков</string>

</resources>