<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/padding_main">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TextHeader" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_margin_top">

        <TextView
            style="@style/termsOfUseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginStart="@dimen/list_margin_start"
            android:text="@string/settings_list_dark_theme" />

        <Switch
            android:id="@+id/themeSwitcherSwitch"
            android:layout_width="@dimen/switcher_layout_width"
            android:layout_height="@dimen/switcher_layout_height"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/switcher_margin"
            android:layout_marginEnd="@dimen/switcher_margin"
            android:layout_marginBottom="@dimen/switcher_margin"
            android:checked="false"
            android:thumbTint="@color/selector_switch_thumb"
            android:trackTint="@color/selector_switch_track"
            tools:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/termsOfUseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginStart="@dimen/list_margin_start"
            android:text="@string/settings_list_share_app" />

        <ImageView
            android:id="@+id/shareAppButton"
            style="@style/ImageViewListSettings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginEnd="@dimen/list_margin_end"
            android:src="@drawable/share_light_mode" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/termsOfUseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginStart="@dimen/list_margin_start"
            android:text="@string/settings_list_write_to_support" />

        <ImageView
            android:id="@+id/writeToSupportButton"
            style="@style/ImageViewListSettings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginEnd="@dimen/list_margin_end"
            android:src="@drawable/support_light_mode" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/termsOfUseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginStart="@dimen/list_margin_start"
            android:text="@string/settings_list_terms_of_usage" />

        <ImageView
            android:id="@+id/termsOfUseButton"
            style="@style/ImageViewListSettings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_gravity="end"
            android:layout_marginVertical="@dimen/list_margin_vertical"
            android:layout_marginEnd="@dimen/list_margin_end"
            android:src="@drawable/arrow_forward_light_mode" />
    </FrameLayout>

</LinearLayout>