<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="horizontal"
    android:foreground="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/track_image_view"
        android:layout_width="@dimen/track_icon_size"
        android:layout_height="@dimen/track_icon_size"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:layout_width="@dimen/dim_null"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/track_margin_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name_text_view"
            style="@style/TextViewListSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/track_name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_name_text_view"
                style="@style/TextViewListArtistName"
                android:layout_width="@dimen/dim_null"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/artist_name" />

            <ImageView
                android:layout_width="@dimen/delimiter_size"
                android:layout_height="@dimen/delimiter_size"
                android:src="@drawable/delimiter"
                app:tint="?attr/colorOnSecondary" />

            <TextView
                android:id="@+id/track_time_text_view"
                style="@style/TextViewListArtistName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/track_time" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/more_button"
        style="@style/ImageViewListSettings"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/list_margin_end"
        android:layout_marginVertical="@dimen/list_margin_vertical"
        android:src="@drawable/arrow_forward_light_mode" />
</LinearLayout>